--- a/web-site/flexbox_grid/teste01/style.css
+++ b/web-site/flexbox_grid/teste01/style.css
@@ -7,17 +7,88 @@
 }
 
 body {
-    background-color: rgb(0, 110, 255);
+    overflow-x: hidden;
 }
 
-.header {
+.main {
     width: 1400px;
-    max-height: 95%;
+    max-width: 95%;
     margin: 0 auto;
 }
 
-.container{
-    width: 100%;
+.hero {
     height: 100%;
+    width: 100%;
     min-height: 100vh;
+    background: url(/web-site/flexbox_grid/teste01/img/fd.jpeg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.hero header .logo h1 a {
+    display: block;
+    font-size: 32px;
+    font-weight: none600;
+    text-decoration: none;
+    color: white;
+}
+
+.hero header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0 30px;
+}
+
+nav ul li {
+    list-style: none;
+    display: inline-block;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    margin-left: 60px;
+    font-size: 15px;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: .4s;
+}
+
+nav ul li:not(:last-child) a:hover,
+nav ul li:not(:last-child) a:focus {
+    border-bottom: 2px solid white;
+}
+
+nav ul li.active a {
+    border-bottom: 2px solid white;
+}
+
+nav ul li.btn a {
+    background: transparent;
+    color: white;
+    border: 1px solid white;
+    padding: 9px 20px;
+    border-radius: 30px;
+    line-height: 1.4;
+    font-size: 14px;
+    font-weight: 500;
+    margin-left: 150px;
+}
+
+h2 {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 40px;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+ 
+
+    background-color: rgba(245, 245, 220, 0.226);
+
 }
