--- a/web-site/web-food/style.css
+++ b/web-site/web-food/style.css
@@ -98,11 +98,11 @@ span {
 
 /*Home*/
 section {
-    padding: 90px 15% 80%;
+    padding: 90px 15% 80px;
 }
 
 .home {
-    height: 8;
+    height: 88%;
     width: 100%;
     position: relative;
     display: grid;
@@ -147,4 +147,45 @@ section {
 /*Home fin*/
 
 /*Header*/
-
+header.sticky{
+    position: 10px 15%;
+    background: var(--bg-color);
+    box-shadow: 0px 4px 15px rgba(0 0 0 / 8%);
+}
+.main-text h2{
+    font-size: var(--h2-font);
+    margin-bottom: 10px;
+}
+.main-text p{
+font-size: var(--p-font);
+font-weight: 500;
+color: var(--second-color);
+line-height: 32px;
+}
+.container-box{
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+gap: 2rem;
+align-items: center;
+margin-top: 4rem;
+}
+.c-mainbx{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.4rem;
+    border-radius: 10px; 
+    height: 90px;
+    background: var(--bg-color);
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    transition: all .38s ease;
+}
+.container-text p{
+    font-size: var(--text-font);
+    font-weight: 500;
+}
+.c-mainbx:hover{
+    transform: translateX(10px);
+    cursor: pointer;
+}
+/*Header fin*/
