--- a/web-site/web-food/style.css
+++ b/web-site/web-food/style.css
@@ -58,7 +58,7 @@ span {
 .navbar a {
     color: var(--text-color);
     font-size: var(--p-font);
-    font-weight: 600;
+    font-weight: 300;
     padding: 5px 10px;
     margin: 2px 25px;
     border-bottom: 1px solid transparent;
@@ -102,7 +102,7 @@ section {
 }
 
 .home {
-    height: 88%;
+    height: 88vh;
     width: 100%;
     position: relative;
     display: grid;
@@ -144,48 +144,267 @@ section {
 .btn:hover {
     letter-spacing: 1px;
 }
+
 /*Home fin*/
 
 /*Header*/
-header.sticky{
+header.sticky {
     position: 10px 15%;
     background: var(--bg-color);
-    box-shadow: 0px 4px 15px rgba(0 0 0 / 8%);
+    box-shadow: 0px 4px 15px rgb(0 0 0 / 8%);
 }
-.main-text h2{
+
+.main-text h2 {
     font-size: var(--h2-font);
     margin-bottom: 10px;
 }
-.main-text p{
-font-size: var(--p-font);
-font-weight: 500;
-color: var(--second-color);
-line-height: 32px;
+
+.main-text p {
+    font-size: var(--p-font);
+    font-weight: 500;
+    color: var(--second-color);
+    line-height: 32px;
 }
-.container-box{
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(300px, auto));
-gap: 2rem;
-align-items: center;
-margin-top: 4rem;
+
+.container-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 2rem;
+    align-items: center;
+    margin-top: 4rem;
 }
-.c-mainbx{
+
+.c-mainbx {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 1.4rem;
-    border-radius: 10px; 
+    border-radius: 10px;
     height: 90px;
     background: var(--bg-color);
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     transition: all .38s ease;
 }
-.container-text p{
-    font-size: var(--text-font);
+
+.container-text p {
+    font-size: var(--p-font);
     font-weight: 500;
 }
-.c-mainbx:hover{
+
+.c-mainbx:hover {
     transform: translateX(10px);
     cursor: pointer;
 }
+
 /*Header fin*/
+
+/*About*/
+.about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2rem;
+}
+
+.about-img img {
+    height: auto;
+    width: 100%;
+}
+
+.about-text h2 {
+    font-size: var(--h2-font);
+    margin-bottom: 2rem;
+    line-height: 1.3;
+}
+
+.about-text p {
+    font-size: var(--p-font);
+    color: var(--second-color);
+    font-weight: 500;
+    line-height: 32px;
+    margin-bottom: 2.3rem;
+}
+
+/*About fin*/
+
+/*Menu*/
+.menu-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 2rem;
+    align-items: center;
+    margin-top: 4rem;
+    cursor: pointer;
+}
+
+.row img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.row {
+    transition: all .38s ease;
+}
+
+.menu-text {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 0;
+}
+
+.menu-left h4 {
+    font-size: 23px;
+}
+
+.menu-right h5 {
+    color: var(--main-color);
+    font-size: 20px;
+}
+
+.row p {
+    color: var(--second-color);
+    font-size: 15px;
+    line-height: 25px;
+    margin-bottom: 15px;
+}
+
+.star i {
+    color: var(--main-color);
+    font-size: 14px;
+    margin-right: 4px;
+
+}
+
+.row:hover {
+    transform: scale(1.02);
+}
+
+/*Menu fin*/
+
+/*Contact*/
+.contact {
+    padding: 50px 15% 40px;
+}
+
+.main-contact {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 2rem;
+}
+
+.contact-content h4 {
+    font-size: 20px;
+    color: var(--text-color);
+    margin-bottom: 1.5rem;
+}
+
+.contact-content li {
+    margin-bottom: 16px;
+
+}
+
+.contact-content li a {
+    display: block;
+    color: var(--text-color);
+    font-size: 15px;
+    font-weight: 500;
+    transition: all .38s ease;
+}
+
+.contact-content li a:hover {
+    transform: translate(10px);
+    color: var(--main-color);
+}
+
+/*Contatc fin*/
+
+/* footer*/
+.last-text p {
+    text-align: center;
+    padding: 25px;
+    color: var(--text-color);
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+
+/* scroll top*/
+.scroll-top {
+    position: fixed;
+    bottom: 2.2rem;
+    right: 2.2rem;
+}
+
+.scroll-top i {
+    padding: 8px;
+    font-size: 1.4rem;
+    color: #fff;
+    background: var(--main-color);
+    border-radius: 5rem;
+}
+
+/*resposive*/
+
+@media (max-width: 1690px) {
+    section {
+        padding: 70px 2%;
+        transition: .2s;
+    }
+
+    header {
+        padding: 11px 2%;
+        transition: .2s;
+    }
+
+    header.sticky {
+        padding: 8px 2%;
+        transition: .2s;
+    }
+
+    .contact {
+        padding: 70px 2%;
+        transition: .2s;
+    }
+}
+
+@media (max-width: 1290px) {
+    section {
+        padding: 80px 2%;
+        transition: .2s;
+    }
+
+    :root {
+        --big-font: 3.2rem;
+        --h2-font: 2rem;
+        --p-font: 1rem;
+        transition: .2s;
+    }
+
+    .home {
+        height: 80vh;
+    }
+
+    .main-text {
+        text-align: center;
+    }
+}
+
+@media (max-width: 880px) {
+    #menu-icon {
+        display: block;
+    }
+    .navbar{
+        position:absolute;
+        top: 100%;
+        right: 0;
+        width: 250px;
+        height: 110vh;
+        background: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 180px 40px;
+        transition: all .38 ease;
+    }
+}
