--- a/web-project/curso/style.css
+++ b/web-project/curso/style.css
@@ -1,11 +1,12 @@
+  .container {
+      text-align: center;
+  }
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    background: radial-gradient(blue,1px, black);
-}
+  button {
+      background: blue;
+      color: white;
+      font-size: 32px;
+      padding: 8px 20px;
+      cursor: pointer;
+      border: 0;
+  }
