--- a/web-site/web-form/style.css
+++ b/web-site/web-form/style.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 100;
+    font-family: Arial, sans-serif;
+   
 }
 
 body {
@@ -15,7 +15,7 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to bottom, #f1f4f9, #dff1ff);
+    background: linear-gradient( #f1f4f9, #dff1ff, #0059ff73);
 }
 
 section .color {
@@ -43,7 +43,7 @@ section .color:nth-child(3) {
     right: 100px;
     width: 300px;
     height: 300px;
-    background: #00d2ff;
+    background: #00ffea;
 }
 
 .box {
@@ -65,13 +65,70 @@ section .color:nth-child(3) {
     border-right: 1px solid rgba(255, 255, 255, 0.5);
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
-.form{
-    position:relative;
+
+.form {
+    position: relative;
     width: 100%;
     height: 100%;
     padding: 40px;
 }
 
-.form h2{
+.form h2 {
+    position: relative;
+    color: #fff;
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-bottom: 40px;
+}
 
+.form h2::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 80px;
+    height: 4px;
+    background: #fff;
+}
+
+.form .inputBox {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.form .inputBox input {
+    width: 100%;
+background: rgba(255, 255, 255, 0.2);
+border: none;
+outline: none;
+padding: 10px 15px;
+border-radius: 35px;
+border: 1px solid rgba(255, 255, 255, 0.5);
+border-right: 1px solid rgba(255, 255, 255, 0.2);
+border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+font-size: 16px;
+letter-spacing: 1px;
+color: #fff;
+box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+}
+
+.form .inputBox input::placeholder{
+ color: #fff;
+}
+.form .inputBox input[type="submit"]{
+    background: #fff;
+    color: #666;
+    max-width: 100px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    font-size: 600;
+}
+.forget{
+    margin-top: 5px;
+    color: rgb(255, 255, 255);
+}
+.forget a{
+color: #fff;
+font-size: 600;
 }
