--- a/web-project/to-do-list/css/style.css
+++ b/web-project/to-do-list/css/style.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: monospace sans-serif;
     color: white;
 }
 
 body {
-    background-image: url(img/cp.gif);
+    background-image: url(/web-project/to-do-list/img/cp.gif);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -17,4 +17,5 @@ body {
 img {
     max-width: 100vh;
     display: block;
+    flex: 1;
 }
