--- a/web-js/to-do-list/css/style.css
+++ b/web-js/to-do-list/css/style.css
@@ -6,12 +6,14 @@
     color: white;
 }
 
+
 body {
     background-image: url(/web-project/to-do-list/img/cp.gif);
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size: contain;
+    background-position: right;
+   background-color: rgb(209, 201, 201);
 }
 
 img {
