--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
-body{
-    background: radial-gradient(black,1px , blue);
-    background-attachment: fixed;
-    background-size: cover;
-    position: relative;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: monospace;
+    list-style: none;
+    text-decoration: none;
+    color: white;
 }
 
-h1{
-    color: red;
+
+body{
+    background: radial-gradient(blue ,1px,black) ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
