--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,11 +8,78 @@
     color: white;
 }
 
+/* ============== menu ============ */
 
-body{
-    background: radial-gradient(blue ,1px,black) ;
+.hero{
+    max-width: 95%;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+.logo h2 a{
+    font-size: 3rem;
+    color: crimson;
+}
+
+nav ul {
+    display: inline-flex;
+    float: right;
+    gap: 15px;
+    font-size: 15px;
+
+}
+/* ============== header ============ */
+.content{
+    max-width: 95%;
+    margin: 0 auto;
+
+}
+
+.main-text h1{
+    margin-top: 10rem;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 100px;
+    font-weight: 700;
+}
+.main-text h2{
+    margin-top: 10rem;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: 600;
+}
+
+body {
+    background: radial-gradient(blue, 1px, black);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+}
+/* ============== cards ============ */
+.container {
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 2rem;
+    display: flex;
+    border: 1px solid white;
+    border-radius: 10px;
+
+}
+
+.cards {
+    flex-direction: row;
+}
+
+.item {
+    width: 400px;
+    height: 200px;
+    flex: 1;
+    margin: 5px;
+    background: rgba(128, 128, 128, 0.678);
+    text-align: center;
+    border-radius: 10px;
+    font-size: 1.5rem;
+
 }
