--- a/web-projetos/style.css
+++ b/web-projetos/style.css
@@ -19,8 +19,6 @@
 
 }
 
-
-
 *,
 *::before,
 *::after {
@@ -42,6 +40,10 @@ body {
 
 /* ========== GENERAL STYLES ==============*/
 
+a .log{
+color: var(--color-dark);
+}
+
 .container {
     width: 80%;
     margin: 0 auto;
@@ -55,7 +57,7 @@ body {
     overflow: hidden;
 }
 
-img{
+img {
     display: block;
     width: 100%;
 }
@@ -70,27 +72,27 @@ img{
     font-size: 0.9rem;
 }
 
-.btn:hover{
+.btn:hover {
     opacity: 0.8;
 }
 
-.btn-primary{
+.btn-primary {
     background: var(--color-primary);
     color: white;
 }
 
-.text-bold{
+.text-bold {
     font-weight: 500;
 }
 
-.text-muted{
+.text-muted {
     color: var(--color-gray);
 }
 
 /* ========== STYLES NAVBAR ==============*/
 
 
-nav{
+nav {
     width: 100%;
     background: var(--color-white);
     padding: 0.7rem 0;
@@ -100,13 +102,34 @@ nav{
 }
 
 
-nav.container{
+nav .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
 }
 
-nav .search-bar{
-    
+nav .search-bar {
+background: var(--color-light);
+border-radius: var(--border-radius);
+padding: var(--search-padding);
 }
+
+nav .search-bar input[type="search"]{
+    background: transparent;
+    width: 30vw;
+    margin-left: 1rem;
+    font-size: 0.9rem;
+    color: var(--color-dark);
+}
+
+nav .search-bar input[type="search"]::placeholder{
+    color: var(--color-gray);
+}
+
+nav .create{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
